--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,600,700,900');
 
 $font-body: 'Raleway', sans-serif;
+$font-size-body: 16px;
 
+$jumbotron-background: url(../images/bg1.jpeg);
+$jumbotron-layer-color: rgba(43,46,74, 0.8);
+
+$brand-color: #66697e;
+$navbar-color: rgba(255, 255, 255, 0.75);
 
 @mixin clearfix() {
     &:after,
@@ -17,13 +23,16 @@ $font-body: 'Raleway', sans-serif;
 // styles
 body {
     font-family: $font-body;
+    margin: 0;
+    padding: 0;
+    font-size: $font-size-body;
 }
 
 // Herade
 header {
     &::after {
         content: '';
-        background-image: url(../images/bg1.jpeg) 50% 50%;
+        background-image: $jumbotron-background;
         position: absolute;
         top: 0;
         right: 0;
@@ -36,11 +45,43 @@ header {
 }
 
 .layer {
-    background-color: rgba(43,46,74, 0.9);
+    background-color: $jumbotron-layer-color;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
     height: 100vh;
     width: 100%;
+}
+.navbar {
+    top: 1rem;
+    left: 0;
+    z-index: 2;
+    right: 0;
+    .bottom-line {
+        border-bottom: 1px solid rgba(255, 255, 225, .15);
+        margin-top: 1rem;
+    }
+}
+.navbar-nav li a {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 0.8em;
+    color: $navbar-color;
+    margin-right: 10px;
+    letter-spacing: 0.1em;
+    &:hover {
+        opacity: 1;
+        background-color: $brand-color;
+        transform: scale(1.2);
+        font-weight: 600;
+    }
+}
+.navbar-toggle {
+    background-color: $brand-color;
+    span {
+        background-color: $navbar-color;
+    }
 }
