--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,13 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,600,700,900');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900');
 
-$font-body: 'Raleway', sans-serif;
+$body-font: 'Raleway', sans-serif;
+$second-font: 'Source Sans Pro', sans-serif;
 $font-size-body: 16px;
 
 $jumbotron-background: url(../images/bg1.jpeg);
 $jumbotron-layer-color: rgba(43,46,74, 0.8);
 
+$color-white: #fff;
 $brand-color: #66697e;
 $navbar-color: rgba(255, 255, 255, 0.75);
+
 
 @mixin clearfix() {
     &:after,
@@ -20,15 +24,21 @@ $navbar-color: rgba(255, 255, 255, 0.75);
 .row {
     @include clearfix;
 }
-// styles
+
 body {
-    font-family: $font-body;
+    font-family: $body-font;
+    font-size: $font-size-body;
     margin: 0;
     padding: 0;
-    font-size: $font-size-body;
-}
 
-// Herade
+}
+.container {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+}
+// @media (min-width: 1170px) { ... }
+// Header
 header {
     &::after {
         content: '';
@@ -43,7 +53,6 @@ header {
         background-size: cover;
     }
 }
-
 .layer {
     background-color: $jumbotron-layer-color;
     position: absolute;
@@ -53,6 +62,8 @@ header {
     height: 100vh;
     width: 100%;
 }
+
+// Navbar
 .navbar {
     top: 1rem;
     left: 0;
@@ -63,6 +74,12 @@ header {
         margin-top: 1rem;
     }
 }
+.navbar-brand {
+    padding-left: 15rem;
+}
+.navbar-nav {
+    padding-right: 15rem;
+}
 .navbar-nav li a {
     padding-top: 15px;
     padding-bottom: 15px;
@@ -70,7 +87,6 @@ header {
     font-weight: bold;
     font-size: 0.8em;
     color: $navbar-color;
-    margin-right: 10px;
     letter-spacing: 0.1em;
     &:hover {
         opacity: 1;
@@ -83,5 +99,52 @@ header {
     background-color: $brand-color;
     span {
         background-color: $navbar-color;
+    }
+}
+//  Jumbotron wrapper
+.jumbotron {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    padding: 0;
+    margin-bottom: 0;
+    .wrapper {
+        position: absolute;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        height: 100vh;
+        width: 100%;
+        color: $color-white;
+        text-align: center;
+        h1 {
+            text-transform: uppercase;
+            font-family: $second-font;
+            font-size: 5em;
+            font-weight: 600;
+            flex: 0 1 auto;
+            max-width: 90rem;
+            margin-top: 10rem;
+            padding-left: 1.5rem;
+            padding-right: 1.5rem;
+        }
+        P {
+            font-size: 1.8em;
+            max-width: 80rem;
+            flex: 0 1 auto;
+            margin-top: 2rem;
+            padding-left: 1.5rem;
+            padding-right: 1.5rem;
+        }
+        a {
+            margin-top: 8rem;
+            padding: 12px 45px;
+            text-transform: uppercase;
+            font-weight: 600;
+            letter-spacing: 0.2em;
+        }
     }
 }
