--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -34,7 +34,7 @@ body {
 
 }
 .container {
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
     padding: 0;
 }
@@ -148,5 +148,33 @@ header {
             font-weight: 600;
             letter-spacing: 0.2em;
         }
+    }
+}
+
+// Section actions
+.actions > div {
+    margin-bottom: 2rem;
+    margin-top: 8rem;
+    .actions__box {
+        text-align: center;
+        font-size: 0.8em;
+        padding: 2rem 6rem;
+        min-height: 32rem;
+        &:hover img {
+            filter: hue-rotate(192deg) opacity(0.7) saturate(110%);
+            transform: rotateY(360deg);
+            transition: transform 1s ease-in, filter .3s .2s ease-in;
+        }
+    }
+    img {
+        transition: filter  .4s ease-in;
+    }
+    h4 {
+        text-transform: uppercase;
+        font-weight: 600;
+        padding-top: 2rem;
+    }
+    p {
+        padding-top: 1rem;
     }
 }
