--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,7 +7,7 @@ $font-size-body: 16px;
 
 //$jumbotronX-background: url(../images/bg1.jpeg);
 $jumbotron-background: url(../images/bg-cyber.jpg);
-$jumbotron-layer-color: rgba(43,46,74, 0.5);
+$jumbotron-layer-color: rgba(43,46,74, 0.7);
 
 $color-white: #fff;
 $brand-color: #66697e;
@@ -124,25 +124,26 @@ header {
         h1 {
             text-transform: uppercase;
             font-family: $second-font;
-            font-size: 5em;
-            font-weight: 600;
+            font-size: 4.8em;
+            font-weight: 700;
             flex: 0 1 auto;
             max-width: 90rem;
-            margin-top: 10rem;
+            margin-top: 0;
             padding-left: 1.5rem;
             padding-right: 1.5rem;
+            line-height: 1;
         }
         P {
-            font-size: 1.8em;
+            font-size: 1.3em;
             font-weight: 500;
             max-width: 80rem;
             flex: 0 1 auto;
-            margin-top: 2rem;
+            margin-top: 1rem;
             padding-left: 1.5rem;
             padding-right: 1.5rem;
         }
         a {
-            margin-top: 8rem;
+            margin-top: 5rem;
             padding: 12px 45px;
             text-transform: uppercase;
             font-weight: 600;
