--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -155,14 +155,14 @@ header {
 // Section actions
 .actions > div {
     margin-bottom: 2rem;
-    margin-top: 8rem;
+    margin-top: 10rem;
     .actions__box {
         text-align: center;
         font-size: 0.8em;
         padding: 2rem 6rem;
         min-height: 32rem;
         &:hover img {
-            filter: hue-rotate(192deg) opacity(0.7) saturate(110%);
+            filter: hue-rotate(190deg) opacity(0.9) saturate(90%);
             transform: rotateY(360deg);
             transition: transform 1s ease-in, filter .3s .2s ease-in;
         }
@@ -177,5 +177,86 @@ header {
     }
     p {
         padding-top: 1rem;
+    }
+}
+
+// Section projects
+.gallery {
+    padding: 7rem 0 0 0;
+    .row {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .gallery__box {
+        padding: 0;
+        text-align: center;
+        height: 35rem;
+        padding: 1px;
+    }
+    .gallery--project {
+        height: 100%;
+        display: block;
+        position: relative;
+        overflow: hidden;
+        &:after {
+            content: "";
+            position: absolute;
+            display: block;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            visibility: hidden;
+            opacity: 0;
+            transition: visibility .5s, opacity .5s;
+            background-color: rgba(67, 127, 196, 0.8);
+        }
+        &:hover, &:focus{
+             &:after {
+                visibility: visible;
+                opacity: 1;
+            }
+            .gallery--img {
+                transform: scale(1.1);
+            }
+            .gallery--content {
+                visibility: visible;
+                opacity: 1;
+            }
+        }
+    }
+    .gallery--img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+        transition: transform .5s;
+        transform: scale(1);
+        backface-visibility: hidden;
+    }
+    .gallery--content {
+        top: 50%;
+        right: 0;
+        left: 0;
+        position: absolute;
+        z-index: 1;
+        visibility: hidden;
+        opacity: 0;
+        color: rgba(112, 0, 0, 0.918);
+        transition: visibility .5s, opacity .5s;
+        transform: translateY(-50%);
+        backface-visibility: hidden;
+        h3 {
+            text-transform: uppercase;
+            font-size: 2.5em;
+            font-weight: 600;
+            letter-spacing: 1.5px;
+        }
+        p {
+            font-weight: 600;
+            font-size: 1.5em;
+        }
     }
 }
