--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,10 @@ $jumbotron-layer-color: rgba(43,46,74, 0.7);
 $color-white: #fff;
 $brand-color: #66697e;
 $navbar-color: rgba(255, 255, 255, 0.75);
+$gallery-content-color: rgba(112, 0, 0, 0.9);
+$layer-social-color: rgba(67, 127, 196, 0.8);
+
+$padding-team: 1rem;
 
 
 @mixin clearfix() {
@@ -165,6 +169,7 @@ header {
             filter: hue-rotate(190deg) opacity(0.9) saturate(90%);
             transform: rotateY(360deg);
             transition: transform 1s ease-in, filter .3s .2s ease-in;
+
         }
     }
     img {
@@ -182,7 +187,7 @@ header {
 
 // Section projects
 .gallery {
-    padding: 7rem 0 0 0;
+    padding: 5rem 0 0 0;
     .row {
         margin-left: 0;
         margin-right: 0;
@@ -211,7 +216,7 @@ header {
             visibility: hidden;
             opacity: 0;
             transition: visibility .5s, opacity .5s;
-            background-color: rgba(67, 127, 196, 0.8);
+            background-color: $layer-social-color;
         }
         &:hover, &:focus{
              &:after {
@@ -244,19 +249,71 @@ header {
         z-index: 1;
         visibility: hidden;
         opacity: 0;
-        color: rgba(112, 0, 0, 0.918);
+        color: $gallery-content-color;
         transition: visibility .5s, opacity .5s;
         transform: translateY(-50%);
         backface-visibility: hidden;
         h3 {
             text-transform: uppercase;
-            font-size: 2.5em;
+            font-size: 1.8em;
             font-weight: 600;
-            letter-spacing: 1.5px;
+            letter-spacing: 2px;
         }
         p {
             font-weight: 600;
-            font-size: 1.5em;
+            font-size: 1.2em;
+        }
+    }
+}
+
+// Section team
+.ourTeam {
+    padding-top: 10rem;
+    padding-bottom: 2rem;
+    .ourTeam__box {
+        padding: 3rem;
+    }
+    img {
+        width: 100%;
+    }
+    h2 {
+        font-size: 1.45em;
+        font-weight: 600;
+        padding-left: $padding-team;
+    }
+    h3 {
+        font-size: 0.9em;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        font-weight: 600;
+        color: $gallery-content-color;
+        padding-left: $padding-team;
+    }
+    p {
+        font-size: 0.9em;
+        padding-left: $padding-team;
+    }
+    .ourTeam__social {
+        padding-left: $padding-team;
+    }
+    .fab {
+        width: 30px;
+        height: 30px;
+        font-size: 1em;
+        text-align: center;
+        margin-right: 3px;
+        margin-top: 2rem;
+        border: 1px solid $brand-color;
+        opacity: 0.5;
+        color: $brand-color;
+        transition: .3s;
+        padding-top: 6px;
+        &:hover {
+            opacity: 1;
+            cursor: pointer;
+            transform: scale(1.1);
+            color: $layer-social-color;
+            border: 1px solid $layer-social-color;
         }
     }
 }
